# Codabench-client

./: .env.example  .gitignore  README.md  pyproject.toml
codabench/: __init__.py  __main__.py  auth.py  cli.py  client.py  competitions.py  downloads.py  errors.py  text.py
examples/: 01_show_competition.py  02_download_competition_files.py  03_submit_and_wait.py  04_download_submission_outputs.py  05_create_competition.py  06_rerun_submission.py
