[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "codabench-client"
version = "0.1.0"
description = "A small, readable Python client and CLI for the Codabench API."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["codabench", "codalab", "benchmark", "competition", "machine-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["requests>=2.25"]

[project.scripts]
codabench = "codabench.cli:main"

[project.urls]
Homepage = "https://github.com/amoujar/codabench-client"
Issues = "https://github.com/amoujar/codabench-client/issues"

[tool.setuptools]
packages = ["codabench"]
