[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "codabench-client"
version = "0.1.1"
description = "A small, readable Python client and CLI for the Codabench API."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["codabench", "codalab", "benchmark", "competition", "machine-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["requests>=2.25"]

[project.scripts]
codabench = "codabench.cli:main"

[project.urls]
Homepage = "https://github.com/moujar/Codabench-client"
Issues = "https://github.com/moujar/Codabench-client/issues"

[tool.setuptools]
packages = ["codabench"]
